--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -119,3 +119,14 @@ button {
         background-color: #007a6e;
     }
 }
+
+.message {
+    font-size: 1.6rem;
+    padding: 1rem;
+    background-color: lightyellow;
+    border: .1rem solid darkgoldenrod;
+    color: darkgoldenrod;
+    border-radius: .4rem;
+    display: block;
+    width: fit-content;
+}
